Fixed Scrollbar Bug

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,14 +1,20 @@
 /* #### Generated By: http://www.cufonfonts.com #### */
 
 @font-face {
-    font-family: 'SEGA LOGO FONT';
-    font-style: normal;
-    font-weight: normal;
-    src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
-    }
-    
-    h1 {
-      font-family: 'SEGA LOGO FONT';
-      font-weight: 200;
-      color: #0ccac4;
-    }
+  font-family: "SEGA LOGO FONT";
+  font-style: normal;
+  font-weight: normal;
+  src: local("SEGA LOGO FONT"), url("SEGA.woff") format("woff");
+}
+
+h1 {
+  font-family: "SEGA LOGO FONT";
+  font-weight: 200;
+  color: #0ccac4;
+}
+
+.tc {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
